--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 title: "quarto-website"
 ---
 
-This is a Quarto website.
+Geopyx is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
